--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <img src="Images/Twitter.png" alt="">
             </div>
             <div class="unsubscribe">
-                <div>2017, All Rights Reserved.</div>
+                <div>2024, All Rights Reserved By Nazmul</div>
                 <div>Unsubscribe</div>
             </div>    
         </div>
